--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:oracle:thin:@135.249.167.25:6142:OTNE
+spring.datasource.username=wdm
+spring.datasource.password=NokiaNfmt+2021+12!
 spring.datasource.driver.class-name=oracle.jdbc.OracleDriver
 
 # Hibernate properties
